src/Cyk.jjt
options
{
    LOOKAHEAD=1;
    FORCE_LA_CHECK=true;
}

PARSER_BEGIN(Cyk)

import java.io.FileNotFoundException;
import java.io.BufferedReader;
import java.io.FileReader;
import java.io.IOException;
import java.io.InputStream;
import java.lang.String;
import java.util.ArrayList;
import java.util.Arrays;
import java.io.ByteArrayInputStream;
import java.nio.charset.StandardCharsets;

public class Cyk
{
	//Container para armazenar as regras da gramatica. Primeira string representa o simbolo. A -> B C seria um ArrayList("A","B","C")
    static ArrayList<ArrayList<String> > rules = new ArrayList<ArrayList<String> >();
  	static ArrayList< String > value = new ArrayList< String >();

  	//frase a verificar
  	static String sentence = new String();
  	static ArrayList< String > sentenceArray; //array com as palavras da frase

	//tabela para preenchimento pelo algoritmo CYK
  	private static String table[][];

	//verifica se o simbolo recebido esta definido
	static private boolean isSymbolDefined(String symbol)
	{
		boolean isDefined = false;
		
		for (int i = 0; i < rules.size(); i++)
		{
			if (rules.get(i).get(0).equals(symbol))
			{
				isDefined = true;
				break;
			}
		}
		
		return isDefined;
	}

	//verifica se todos os simbolos da gramatica estao definidos
	static private boolean checkGrammar()
	{
		ArrayList<String> symbols = new ArrayList<String>();
		
		//obtem todos os simbolos do lado direito de uma regra
		for (int i = 0; i < rules.size(); i++)
		{
			for (int j = 1; j < rules.get(i).size(); j++)
			{
				if (Character.isUpperCase(rules.get(i).get(j).charAt(0)))
				{
					symbols.add(rules.get(i).get(j));
				}
			}
		}
	
		int defined = 0;

		//verifica se cada simbolo obtido acima esta definido
		for (int i = 0; i < symbols.size(); i++)
		{
			if (isSymbolDefined(symbols.get(i)))
				defined++;
		}
		
		if (defined == symbols.size())
			return true;
		else 
			return false;
	}
  	
  	//verifica se a frase recebida pertence a gramatica atraves do algoritmo CYK
	public static boolean checkCyk()
	{	 	
		sentenceArray = new ArrayList(Arrays.asList(sentence.split(" ")));
		table = new String[sentenceArray.size()][sentenceArray.size()];
		
	 	//inicializar tabela
		for (int i = 0; i < sentenceArray.size(); i++)
			for (int j = 0; j < sentenceArray.size(); j++)
				table[i][j] = "";

		//primeira linha da tabela
		for (int i = 0; i < sentenceArray.size(); i++) //percorre a frase recebida
        {
            for (int j = 0; j < rules.size(); j++) //para cada palavra ve as regras
            {
                ArrayList<String> rule = new ArrayList<String>();
				rule = rules.get(j);

				if (rule.size() == 2) //so se for regra do tipo "A -> terminal" 
					if (sentenceArray.get(i).equals(rule.get(1))) //se a palavra da frase recebida existir
                    	table[i][0] = rule.get(0); //adiciona o respectivo Simbolo a tabela               
            }
        }

		//Preencher o resto da tabela
        for (int i = 1; i < sentenceArray.size(); i++)
			for (int j = 0; j < sentenceArray.size() - i; j++)
				for (int k = 0; k < i; k++)					for (int r = 0; r < rules.size(); r++)
					{						ArrayList<String> rule = new ArrayList<String>();
						rule = rules.get(r);
					
						//if P[j,k,B] and P[j+k,i-k,C] then set P[j,i,A] = true
					
						if (rule.size() == 3) // apenas se for uma regra com simbolos nao terminais tipo "A -> B C"
						{
							if (!table[j][k].equals("") && !table[j+k+1][i-k-1].equals("")) 
							{								
								if (table[j][k].equals(rule.get(1)) && table[j+k+1][i-k-1].equals(rule.get(2)))									
								{									table[j][i] = rule.get(0);
								}
							}
						}  
					}

		printTable();

		if (table[0][sentenceArray.size()-1].equals("")) //se a posicao mais alta da tabela estiver vazia
			System.out.println("\nThe sentence \"" + sentence + "\" isn't a member of the given grammar.");
		else
			System.out.println("\nThe sentence \"" + sentence + "\" is a member of the given grammar.");
			 
		return true;	  
	}

	//imprimir tabela
	private static void printTable() {
			
		System.out.println("CYK Table:\u005cn");
		for (int i = sentenceArray.size()-1; i >= 0; i--)
		{
	        for (int j = 0; j < sentenceArray.size(); j++)
	        {
	          	String tableValue = table[j][i];
	          	
	          	if (tableValue.length() == 1)
	          		System.out.print(tableValue + "    ");
	          	else if (tableValue.length() == 2)
	          		System.out.print(tableValue + "   ");
          		else if (tableValue.length() == 3)
	          		System.out.print(tableValue + "  ");
	          	else if (tableValue.length() > 3)
	          	{					tableValue = tableValue.substring(0, 2);
					System.out.print(tableValue + "  ");
	          	}
	          	else
	          		System.out.print(tableValue + "_    ");
	        }
            System.out.println("\n");
		}
	}
	
   public static void main(String args[]) throws ParseException, IOException {

		if (args.length != 1)		{			System.out.println("Usage: java -jar cyk.jar < file name >");
			System.exit(1);
		}
		
        String grammar = new String(), line = null;
        BufferedReader reader = null;
        try {
        	reader = new BufferedReader(new FileReader(args[0]));
        } catch (FileNotFoundException e) {
            System.out.println("File not found!");
            System.exit(1);
        }
		
        while ((line = reader.readLine()) != null) {
        	grammar += line;
        }

        InputStream stream = new ByteArrayInputStream(grammar.getBytes(StandardCharsets.UTF_8));
        Cyk cyk = new Cyk(stream);
        SimpleNode root = cyk.Program();
		
        // dump tree
        System.out.println("Abstract Syntax Tree:\n");
        root.dump("");
				
		if (checkGrammar())
		{
		 	System.out.println("---------------\nValid Grammar\n---------------");
			checkCyk();
		}
		else		
			System.out.println("Invalid Grammar!");
    }
}


PARSER_END(Cyk)

SKIP :
{
	" " | "\n" | "\r" | "\t"
}

TOKEN:
{
	
	 < WORD: (["a"-"z"])+ >
	| < SENTENCE: (< WORD > (" ")?)+ >  
	| < SYMBOL: (["A"-"Z"])+ >
}

/*
Assignment := (Symbol "->" Value ";")+
Value := Symbol Symbol;
Value := Word;
*/

SimpleNode Program(): {}
{
  (Assignment())+ Sentence()
   {return jjtThis;}
}

void Assignment()#void:{}
{	Symbol() "->"Value()";"
}

void Symbol() #void : {Token t;}
{
  (    
	t=<SYMBOL> 
	{
		value = new ArrayList<String>();
		value.add(new String(t.image));
		jjtThis.assignment= new String(t.image);
	}
) #Symbol
}
void Value() #void : {Token t, t2;} 
{	(
		t=<WORD>
		{
		  value.add(new String(t.image));
		  jjtThis.value= new String(t.image);
		}#Value
		| 		  
		t2=<SYMBOL>
		{
		  value.add(new String(t2.image));
		  jjtThis.value= new String(t2.image);
		}#Value1
		t2=<SYMBOL> {
		  value.add(new String(t2.image));
		  jjtThis.value2= new String(t2.image);} #Value2		 		
	)
	{		rules.add(value);
	}
}

void Sentence() #void : {Token t;}
{
  (    
	t=< SENTENCE >
	{
    	sentence = (new String(t.image));
    	jjtThis.sentence = new String(t.image);
	}
)#Sentence
}
